# software-cpu-emulator

./: .gitignore  CMakeLists.txt  README.md  assembler.cpp  assembler.h  cpu.cpp  cpu.h  dataFormat.h  emulator.cpp  factorial pseudocode.c  fibonacci.asm  fibonacci.c  hello.asm  hello.c  instructions.txt  isa.cpp  isa.h  opcodes.cpp  opcodes.h  register.h  simulate.cpp  simulate.h  timer.asm
docs/: execution_cycle.md  isa.md  memory_map.md
include/: alu.h  assembler.h  bus.h  cpu.h  isa.h  memory.h
programs/: fibonacci.asm  hello.asm  timer_demo.asm
roms/: README.md
src/: alu.cpp  assembler.cpp  bus.cpp  cpu.cpp  isa.cpp  main.cpp  memory.cpp
tests/: manual_test_plan.md
video/: README.md
